# lib-webe

./: .gitignore  Cargo.toml  README.md  TODO.md  gulpfile.coffee  gulpfile.js  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
.github/agents/: github.agent.md  modern-rust.agent.md
.github/workflows/: ci.yml  dependabot-triage-agent.lock.yml  dependabot-triage-agent.md  dependabot-triage-agent.yml  issue-triage.lock.yml  issue-triage.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.triage-agent/dependabot/: alert-10-copy-props.json  alert-12-decode-uri-component.json  alert-13-minimist.json  alert-14-minimist.json  alert-16-tar.json  alert-17-tar.json  alert-20-tar.json  alert-22-minimist.json  alert-23-minimist.json  alert-26-fsevents.json  alert-27-lodash.json  alert-29-es5-ext.json  alert-3-yargs-parser.json  alert-30-braces.json  alert-35-tar.json  alert-36-tar.json  alert-4-ini.json  alert-40-tar.json  alert-41-tar.json  alert-42-lodash.json  alert-43-tar.json  alert-45-tar.json  alert-49-minimatch.json  alert-5-y18n.json  alert-50-tar.json  alert-51-tar.json  alert-6-lodash.json
cicd/: Jenkinsfile.runtime-image  Jenkinsfile.unit-tests
crates/webe_args/: Cargo.toml  README.md
crates/webe_args/src/: lib.rs
crates/webe_args/tests/: cli.rs
crates/webe_auth/: Cargo.toml
crates/webe_auth/migrations/2019-02-05-225124_create_auth/: down.sql
crates/webe_auth/src/: account.rs  lib.rs  schema.rs  session.rs  utility.rs
crates/webe_auth/src/db/: mod.rs
crates/webe_auth/src/email/: mod.rs
crates/webe_auth/src/http/: login.rs  logout.rs  verify_account.rs
crates/webe_id/: Cargo.toml  README.md
crates/webe_id/benches/: generation.rs
crates/webe_id/src/: async_backpressure.rs  components.rs  error.rs  generator.rs  id.rs  lib.rs  node.rs  time.rs
crates/webe_id/tests/: concurrency.rs  generation.rs  representations.rs  safety.rs  tokio_backpressure.rs
crates/webe_id/tests/common/: mod.rs
crates/webe_log/: Cargo.toml
crates/webe_log/src/: lib.rs
crates/webe_log/tests/: log.rs
crates/webe_web/: Cargo.toml  README.md
crates/webe_web/src/: body.rs  constants.rs  error.rs  lib.rs  processor.rs  request.rs  response.rs  route.rs  server.rs  status.rs  validation.rs
crates/webe_web/src/encoding/: chunked.rs  chunked_encoder.rs  mod.rs
crates/webe_web/src/responders/: file.rs  mod.rs  options.rs  spa.rs  static_message.rs
crates/webe_web/tests/: body.rs  request_parsing.rs  responders.rs  responses.rs  routing.rs
crates/webe_web/tests/common/: mod.rs
example/: Cargo.toml
example/src/: main.rs  webe_auth.coffee
examples/basic_server/: Cargo.toml
examples/basic_server/src/: main.rs
migrations/2019-02-05-225124_create_auth/: down.sql  up.sql
scripts/: dependabot_triage.py
specs/001-revamp-args-crate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-revamp-args-crate/checklists/: requirements.md
specs/001-revamp-args-crate/contracts/: public-api.md
specs/002-revamp-webe-web/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-revamp-webe-web/checklists/: requirements.md
specs/002-revamp-webe-web/contracts/: public-api.md
specs/003-reimplement-webe-id/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-reimplement-webe-id/checklists/: requirements.md
specs/003-reimplement-webe-id/contracts/: public-api.md
src/: constants.rs  lib.rs  schema.rs
src/auth/: mod.rs
src/auth/api/: account_api.rs  mod.rs  session_api.rs  user_api.rs
src/auth/http/: create_account.rs  create_user.rs  login.rs  mod.rs  session_http.rs  verify_account.rs
src/auth/http/forms/: login_form.rs
src/auth/models/: account.rs  account_model.rs  mod.rs  session.rs  session_model.rs  user.rs  user_model.rs
src/http/: constants.rs  method.rs  mod.rs  request.rs  response.rs  server.rs  status.rs
src/http/encoding/: chunked.rs
src/http/responders/: file.rs  json.rs  mod.rs  static_message.rs
tests/: auth.rs  combined.rs  http.rs  id.rs
webe_args/: Cargo.toml
webe_args/src/: args.rs  lib.rs
webe_args/tests/: cli.rs
webe_auth/: Cargo.toml
webe_auth/migrations/2019-02-05-225124_create_auth/: down.sql  up.sql
webe_auth/src/: constants.rs  database.rs  email.rs  lib.rs  schema.rs  session.rs  utility.rs
webe_auth/src/account/: mod.rs
webe_auth/src/api/: account_api.rs  mod.rs  session_api.rs  user_api.rs
webe_auth/src/db/: mod.rs
webe_auth/src/email/: mod.rs
webe_auth/src/http/: create_account.rs  create_user.rs  login.rs  logout.rs  mod.rs  secure.rs  verify_account.rs
webe_auth/src/models/: account_model.rs  mod.rs  session_model.rs  user_model.rs
webe_auth/src/session/: mod.rs
webe_auth/tests/: auth.rs
webe_build/: Cargo.toml
webe_build/src/: action.rs  context.rs  lib.rs  plan.rs  planhistory.rs  task.rs
webe_build/src/actions/: mod.rs  printcontext.rs  printtext.rs
webe_build/tests/: build.rs
webe_log/: Cargo.toml
webe_log/src/: lib.rs
webe_log/tests/: log.rs
webe_web/: Cargo.toml
webe_web/src/: constants.rs  lib.rs  processor.rs  request.rs  response.rs  server.rs  status.rs  validation.rs
webe_web/src/encoding/: chunked.rs
webe_web/src/responders/: file.rs  mod.rs  options.rs  spa.rs  static_message.rs
