[package]
name = "lib-webe"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

[dependencies]
bcrypt = "0.3.0"
diesel = { version = "1.4.1", features = ["mysql","chrono", "r2d2"] }
rand = "0.6.5"
uuid = { version = "0.7.2", features = ["v4"] }

[dev-dependencies]
dotenv = "0.13.0"