[package]
name = "webe_auth"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

[dependencies]

bcrypt = "0.3.0"
diesel = { version = "1.4.1", features = ["mysql","chrono", "r2d2"] }
lettre = { version = "0.9.2", features = ["connection-pool"] }
lettre_email = "0.9.2"
native-tls = "0.2.3"
r2d2 = "0.8.5"
rand = "0.6.5"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
uuid = { version = "0.7.2", features = ["v4"] }

webe_web = { path = "../webe_web" }

[dev-dependencies]
dotenv = "0.14.1"