[package]
name = "webe_auth"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

[dependencies]

bcrypt = "0.6.1"
diesel = { version = "1.4.3", features = ["mysql","chrono", "r2d2"] }
lettre = { version = "0.9.2", features = ["connection-pool"] }
lettre_email = "0.9.2"
native-tls = "0.2.3"
r2d2 = "0.8.7"
rand = "0.7.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
tokio = { version = "1.5.0", features = ["full"] }

webe_web = { path = "../webe_web" }
webe_id = "0.1.1"

[dev-dependencies]
dotenv = "0.15.0"