[package]
name = "webe_auth"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2024"

[dependencies]
async-trait = "0.1.77"                                                 # witchcraft to make async work in dyn trait objects
bcrypt = "0.15.0"
diesel = { version = "2.2.6", features = ["mysql", "chrono", "r2d2"] }
lettre = { version = "0.9.2", features = ["connection-pool"] }
lettre_email = "0.9.2"
native-tls = { version = "0.2.11", features = ["vendored"] }
r2d2 = "0.8.7"
rand = "0.7.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }

webe_web = { path = "../webe_web" }
webe_id = "0.1.1"

[dev-dependencies]
dotenv = "0.15.0"
