[package]
name = "webe_web"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
limit_read = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
pin-project-lite = "0.2"