[package]
name = "webe_auth"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true # witchcraft to make async work in dyn trait objects
bcrypt = "0.15.0"
diesel = { version = "2.2.6", features = ["mysql", "chrono", "r2d2"] }
lettre = { version = "0.9.2", features = ["connection-pool"] }
lettre_email = "0.9.2"
native-tls = { version = "0.2.11", features = ["vendored"] }
r2d2 = "0.8.7"
rand = "0.7.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

webe_web = { path = "../webe_web" }
webe_id = "0.1.1"

[dev-dependencies]
dotenvy = "0.15"
